@@ -110,6 +110,8 @@
 
 #define PREMAKE_KEY_LIBPATH	"LIB_PATH"
 
+#define PREMAKE_KEY_BYTEORDER	"HW_BYTEORDER"
+
 #define PREMAKE_KEY_SYSCONFDIR	"SYSCONFDIR"
 
 #define PREMAKE_KEY_PREFIX	"PREFIX"
