@@ -1,3 +1,6 @@
+02 Sep 2003 mipsator
+ * added byte_order_check() in pmksetup to set HW_BYTEORDER.
+
 01 Sep 2003 mipsator
  * added invert_bool() and get_comp_path() in functool.
  * improved language checking and compiler path setting in func.
